@@ -13,6 +13,7 @@ android {
         testInstrumentationRunner "androidx.stest.runner.AndroidJUnitRunner"
         multiDexEnabled = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,42 +30,64 @@ android {
         targetCompatibility = "8"
         sourceCompatibility = "8"
     }
-}
+    testOptions {
+        // Encapsulates options for local unit tests.
+        unitTests {
+            // By default, local unit tests throw an exception any time the code you are testing tries to access
+            // Android platform APIs (unless you mock Android dependencies yourself or with a testing
+            // framework like Mockito). However, you can enable the following property so that the test
+            // returns either null or zero when accessing platform APIs, rather than throwing an exception.
+            returnDefaultValues true
 
-allprojects {
-    repositories {
-        maven { url 'https://jitpack.io' }
+            // Encapsulates options for controlling how Gradle executes local unit tests. For a list
+            // of all the options you can specify, read Gradle's reference documentation.
+            all {
+                // Sets JVM argument(s) for the test JVM(s).
+                jvmArgs '-XX:MaxPermSize=256m'
+
+                // You can also check the task name to apply options to only the tests you specify.
+                if (it.name == 'testDebugUnitTest') {
+                    systemProperty 'debug', 'true'
+                }
+
+            }
+        }
     }
-}
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    allprojects {
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
+    }
 
-    // Required for instrumented tests
-    androidTestImplementation 'com.android.support:support-annotations:24.0.0'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+        // Required for instrumented tests
+        androidTestImplementation 'com.android.support:support-annotations:24.0.0'
+        androidTestImplementation 'com.android.support.test:runner:0.5'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-messaging:20.2.0'
-    implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation files('libs/libDaumMapAndroid.jar')
+        implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+        implementation 'com.google.android.material:material:1.2.0-alpha06'
+        implementation 'de.hdodenhof:circleimageview:3.0.0'
+        implementation 'com.github.bumptech.glide:glide:4.11.0'
+        implementation "androidx.cardview:cardview:1.0.0"
+        implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+        implementation 'com.google.firebase:firebase-analytics:17.2.2'
+        implementation 'com.google.firebase:firebase-messaging:20.2.0'
+        implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        implementation files('libs/libDaumMapAndroid.jar')
 
 
-
-    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+        implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+    }
 }
